--- a/GoogleMaps_API_WSK/app/src/main/res/layout/activity_main.xml
+++ b/GoogleMaps_API_WSK/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,55 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <!-- Campo para inserir o destino -->
+
+    <!-- Mapa -->
+
+    <!-- Botões -->
+
+    <EditText
+        android:id="@+id/destination_input"
+        android:layout_width="305dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="72dp"
+        android:hint="Digite o destino"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toTopOf="@+id/trace_route_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/destination_input"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/trace_route_button"
+        android:layout_width="157dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="280dp"
+        android:enabled="false"
+        android:text="Traçar Rota"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/start_navigation_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:layout_alignParentTop="true"
-        android:background="#AAFFFFFF">
-
-        <EditText
-            android:id="@+id/origin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Digite o ponto de origem" />
-
-        <EditText
-            android:id="@+id/destination"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Digite o destino" />
-
-        <Button
-            android:id="@+id/btnRoute"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Traçar Rota" />
-    </LinearLayout>
-
-</RelativeLayout>
+        android:text="Iniciar Viagem"
+        android:visibility="gone" />
+</androidx.constraintlayout.widget.ConstraintLayout>
